--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "ts-node": "^10.4.0",
     "tsc-watch": "^4.5.0",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "crypto-js": "^4.1.1"
   }
 }
